@@ -33,6 +33,7 @@ exception_redirect = False
 enable_views_public = True
 enable_views_admin = True
 requests.disable_ssl_warning = True
+enable_acme_flow = True
 
 # defaults to testing. you probably want the main system. this library is v1 only.
 certificate_authority = letsencrypt-v1-staging
